Add Chris P reply line by line template, and address the simplest corrections #9

--- a/02-hiv-aids.Rmd
+++ b/02-hiv-aids.Rmd
@@ -46,7 +46,7 @@ coverage2022 <- 76
 
 <!-- What is HIV -->
 HIV is a retrovirus which infects humans.
-If untreated, HIV can develop into a more advanced stage known as acquired immunodeficiency syndrome (AIDS).
+If untreated, infection with HIV can develop into a more advanced stage known as acquired immunodeficiency syndrome (AIDS).
 HIV primarily attacks a type of white blood cell vital for the function of the immune system.
 As a result, AIDS is characterised by increased risk of developing opportunistic infections such as tuberculosis or *Pneumocystis* pneumonias, which can result in death.
 
@@ -103,7 +103,7 @@ The number of AIDS-related deaths, `r custom_numbers_to_words(art_deaths_averted
   Particular efforts have been made to provide pregnant women with ART to reduce the chance of mother-to-child transmission (MTCT) [@siegfried2011antiretrovirals].
 
 * Voluntary medical male circumcision (VMMC) partially protects against female-to-male HIV acquisition.
-Three landmark randomised control trials (RCTs) [@auvert2005randomized; @gray2007male; @bailey2007male] found complete surgical removal of the foreskin to result a reduction of HIV acquisition in men by 50-60%.
+Three landmark randomised control trials (RCTs) [@auvert2005randomized; @gray2007male; @bailey2007male] found complete surgical removal of the foreskin to result in a reduction of HIV acquisition in men by 50-60%.
 Based on this evidence, VMMC has been recommended since 2007 by the World Health Organization (WHO) and UNAIDS as a key HIV intervention in high-prevalence settings [@world2007new].
 Scale up of VMMC across 15 priority countries between 2008 and 2019 is estimated to have already averted `r custom_numbers_to_words(vmmc_infections_averted)` new HIV infections, though the future number of new HIV infections averted is likely to be much higher [@mcgillen2018emerging; @unaids2021vmmc].
 
@@ -204,7 +204,7 @@ The most prominent categories are:
 The surveys conducted in the most countries are Demographic and Health Surveys [DHS ;@measure2012sampling], which include a wide range of health related questions, and more HIV-specific Population-based HIV Impact Assessment [PHIA; @phia] and AIDS Indicator Surveys (AIS).
 Some countries also implement their own survey series, such as the South Africa Behavioural, Sero-status and Media Impact Survey (SABSSM).
 Household surveys provide high quality standardised data about HIV, typically designed to furnish nationally-representative estimates.
-Both DHS and PHIA surveys collecting demographic, behavioural, and clinical information.
+Both DHS and PHIA surveys collect demographic, behavioural, and clinical information.
 Additionally, HIV testing is conducted via home-based testing, with results returned immediately, or anonymous dried blood spot testing.
 
 * **Programmatic data** refer to data routinely collected during delivery of health services.
