--- a/03-bayesian.Rmd
+++ b/03-bayesian.Rmd
@@ -64,7 +64,7 @@ As such, it may be argued that issues of subjectivity are not unique to prior di
 
 The probability model can be simulated from to obtain samples $(\mathbf{y}, \boldsymbol{\mathbf{\phi}}) \sim p(\mathbf{y}, \boldsymbol{\mathbf{\phi}})$.
 If samples of the data $\mathbf{y}$ differ too greatly from what the analyst would expect to see in reality, then the model fails to capture their prior scientific understanding.
-Models which do not produce plausible data samples can be refined.
+Models that do not produce plausible data samples can be refined.
 Checks of this kind [@gelman2013bayesian; Chapter 6] can be used to help iteratively build models, gradually adding complexity as required.
 
 ### Bayesian computation
@@ -209,8 +209,8 @@ The temporal study period $\mathcal{T} \subseteq \mathbb{R}$ can more generally 
 This feature, together with the fact that time only moves forward, is what distinguishes space and time. 
 As with space, observations may be associated to a point $t \in \mathcal{T}$ or period of time $T \subseteq \mathcal{T}$, illustrated in Panel B\@ref(fig:st).
 
-The change-of-support problem [@gelfand2001change] occurs when data is modelled at a scale different to the one it was observed at.
-For example, in this thesis, particularly Chapter \@ref(beyond-borders), point data is modelled at an area-level.
+The change-of-support problem [@gelfand2001change] occurs when data are modelled at a scale different to the one it was observed at.
+For example, in this thesis, particularly Chapter \@ref(beyond-borders), point data are modelled at an area-level.
 Special cases of the change-of-support problem include downscaling, upscaling, and dealing with so-called misaligned data.
 It is also possible that spatio-temporal observations of the same process are made at multiple scales.
 Jointly modelling data at different scales simultaneously is another closely related challenge to the change-of-support problem.
@@ -519,7 +519,7 @@ where $N_{hj}$ is the number of households in strata $h$ and cluster $j$.
 In the second stage, the secondary sampling units are households.
 All households in the selected cluster are listed, before being sampled systematically at a regular interval, with equal probability
 \begin{equation}
-\pi_{1hj} = \frac{n_{hj}}{N_{hj}},
+\pi_{2hj} = \frac{n_{hj}}{N_{hj}},
 \end{equation}
 where $n_{hj}$ is the number of households selected in cluster $j$ and stratum $h$.
 All adults are interviewed in each selected household.
@@ -553,12 +553,12 @@ where $R_\omega = \omega R$.
 The first term is called the data defect correlation (DDC), and measures the correlation between the weighted recording mechanism and given function of the outcome of interest.
 The DDC is minimised when $G \perp \!\!\! \perp R_\omega$.
 The second term is the data scarcity, and measures the effective proportion of the population who have been recorded.
-Finally, the third term is the problem difficultly, and measures the intrinsic difficulty of the estimation problem.
+Finally, the third term is the problem difficulty, and measures the intrinsic difficulty of the estimation problem.
 This term is independent of the sampling or analysis method used.
 
 This thesis uses hierarchical Bayesian models defined using weighted direct survey estimates [@fay1979estimates].
 Following @chen2014use, the sampling distribution of these direct estimates is arrived at by estimating the variance of Equation \@ref(eq:hajek).
-Although this approach acknowledges the complex survey design, it has some important limitatWiions.
+Although this approach acknowledges the complex survey design, it has some important limitations.
 Importantly, it ignores clustering structure within the observations $i$.
 Furthermore, as a two-step procedure, it fails to fully propagate uncertainty from a Bayesian perspective.
 While progress has been made in dealing with survey data, the @gelman2007struggles claim that "survey weighting is a mess" still holds some weight.
