--- a/04-beyond-borders.Rmd
+++ b/04-beyond-borders.Rmd
@@ -485,7 +485,7 @@ A weakly informative $\mathcal{N}(-2, 1)$ prior was placed on $\beta_0$, setting
 
 In cases where the length-scale $l$ was fixed, it was set based on the geometry such that points an average distance apart had 1\% correlation [@best1999bayesian].
 In cases where a prior distribution was set on the length-scale it was $l \sim \mathrm{Inv{\text-}Gamma}(a, b)$, with $a$ and $b$ chosen for each geometry such that 5\% of the prior mass was below the 5% quantile for distance between points and 5\% of the prior mass was above the 95% quantile [@betancourt2017robust].
-The sensitivity analysis in Appendix \@ref(lengthscale-prior) illustrates the extent to which six possible lengthscale prior distributions (Figure \@ref(fig:lengthscale-prior)) effect the lengthscale posterior distribution (Figure \@ref(fig:lengthscale-posterior)).
+The sensitivity analysis in Appendix \@ref(lengthscale-prior) illustrates the extent to which six possible lengthscale prior distributions (Figure \@ref(fig:lengthscale-prior)) affect the lengthscale posterior distribution (Figure \@ref(fig:lengthscale-posterior)).
 
 #### Inference
 
@@ -706,9 +706,9 @@ The pointwise CRPS for all models was high at one outlying district in the surve
 It is difficult to see how any spatial random model would perform well in this situation, without additional covariates or using a distribution with heavier tails than the Gaussian.
 
     The CK and IK models had lengthscale posterior distributions largely unchanged from their prior distribution (Figure \@ref(fig:lengthscale-posteriors)).
-    This uncertainty in lengthscale resulted wide prevalence 95% credible intervals for the CK and IK models in Figure \@ref(fig:ladder-civ2017phia).
+    This uncertainty in lengthscale resulted in wide prevalence 95% credible intervals for the CK and IK models in Figure \@ref(fig:ladder-civ2017phia).
     This example shows the importance of being careful using kernel models, and the prior distributions set on their hyperparameters.
-    It is suprisingly that this behaviour appears not to have resulted in poor LOO or SLOO performance.
+    It is surprisingly that this behaviour appears not to have resulted in poor LOO or SLOO performance.
 
     For this survey the BYM2 proportion posterior distribution was also similar to its prior distribution, in contrast to each of the other surveys which had BYM2 proportion posteriors peaked at one, corresponding to spatially structured noise (Figure \@ref(fig:proportion-posteriors)).
 
@@ -716,7 +716,7 @@ It is difficult to see how any spatial random model would perform well in this s
 While the LOO and SLOO CRPS values for IID, Besag and BYM2 models were similar, for the kernel models forecasting performance was substantially reduced by leaving out adjacent districts.
 This finding is suprising, as the kernel models make use of more distant correlations, and it is the adjacency-based models that one would intuitively expect to be hampered more by the SLOO-CV.
 For the IID model, that LOO and SLOO performance are similar is no surprise as in all cases the IID model should be predicting the mean.
-Though less data is available in the SLOO case, this should be of little consequence.
+Though less data are available in the SLOO case, this should be of little consequence.
 
 3. For the 2017 PHIA survey in Tanzania (Figure \@ref(fig:crps-mean-se-tza2017phia)), under LOO-CV the kernel models performed better, but under SLOO-CV there was a significant drop in performance.
 
