--- a/05-multi-agyw.Rmd
+++ b/05-multi-agyw.Rmd
@@ -142,7 +142,7 @@ number_of_surveys %>%
 
 Table: (\#tab:risk-groups) HIV risk groups and HIV incidence rate ratios relative to AGYW with one cohabiting sexual partner.
 The incidence rate ratio for women with non-regular or multiple sexual partner(s) was derived from analysis of longitudinal data by @slaymaker2020croi.
-Among FSW, the incidence rate ratio (25.0, 13.0, 9.0, 6.0, 3.0) depended on the level of HIV incidence among the general population (<0.1\%, 0.1-0.3\%, 0.3-1.0\%, 1.0-3.0\%, >3.0\%), such that higher local HIV incidence in the general population corresponded to a lower incidence rate ratio for FSW.
+Among female sex workers (FSW), the incidence rate ratio (25.0, 13.0, 9.0, 6.0, 3.0) depended on the level of HIV incidence among the general population (<0.1\%, 0.1-0.3\%, 0.3-1.0\%, 1.0-3.0\%, >3.0\%), such that higher local HIV incidence in the general population corresponded to a lower incidence rate ratio for FSW.
 Estimates of HIV incidence rate ratios for FSW were derived by UNAIDS based on patterns of relative HIV prevalence among FSW compared to general population prevalence.
 
 I used household survey data from 13 countries identified by the Global Fund [@global2018measurement] as priority countries for implementation of AGYW HIV prevention.
@@ -274,7 +274,7 @@ Although in theory an improper prior distribution $\theta_{ita} \propto 1$ shoul
 
 #### Model specifications
 
-|    | Category $\beta_k$ | Country $\zeta_{ck}$ | Age $\alpha_{ack}$ | Spatial $\phi_{ik}$ | Temporal $\gamma_{tk}$ |
+|    | Category $\beta_k$ | Country $\zeta_{ck}$ | Age $\alpha_{ack}$ | Spatial $u_{ik}$ | Temporal $\gamma_{tk}$ |
 | -- | ------------------ | -------------------- | ------------------ | ------------------- | ---------------------- |
 | M1 | IID | IID | IID | IID   | IID |
 | M2 | IID | IID | IID | Besag | IID |
