--- a/corrections/chris.Rmd
+++ b/corrections/chris.Rmd
@@ -89,8 +89,7 @@ Relatedly, assuming I'm understanding correctly, there is an important tradeoff 
 * appendices.)
 * 131: Using same number of iterations with stan (full posterior, including latent values) vs tmbstan (hyperparameters, much lower-dimensional space) seems odd.
 * 132: Fig 6.7 is just grid/AGHQ, not EB? If so, why present EB method?
-* 132: Why surprising tmbstan faster than rstan - what are the different computations involved - having to compute Laplace vs doing HMC over higher dimensional space. I expect it would vary with
-* hyperparameter and latent dimensions.
+* 132: Why surprising tmbstan faster than rstan - what are the different computations involved - having to compute Laplace vs doing HMC over higher dimensional space. I expect it would vary with hyperparameter and latent dimensions.
 * 136: "kridge" -> "krige"
 * 137: "this" in "this difference" is unclear.
 * 143: "survey weighting increases variance" - what about effect of increasing precision in small strata? Are you talking about influence of complex survey design or somehow about weighting scheme?
