Fixes to 3-4 Chris P minor corrections #9

--- a/02-hiv-aids.Rmd
+++ b/02-hiv-aids.Rmd
@@ -241,6 +241,7 @@ Each of these issues can be characterised as being problems of missing data.
 
 3. **Response and measurement biases**:
 Individuals may be hesitant to disclose their HIV status, or report higher risk behaviours, due to social desirability bias or a fear of discrimination or stigma.
+Furthermore, individuals may be unaware of their HIV status.
 When available, biomarker data can be used to overcome under-reporting of HIV status, but still may be subject to measurement errors.
 Biases in behavioural data can be more difficult to disentangle.
 
@@ -282,7 +283,7 @@ Multiple data sources are used in Chapter \@ref(multi-agyw) to overcome the limi
 3. **Expert guidance**:
 Expert epidemiological, demographic, and local stakeholder guidance can be used to improve estimates.
 Ensuring the quality of any data used in the estimation process is essential.
-<!-- UNAIDS process. -->
+Indeed, careful validation of data by country teams is a crucial part of the yearly UNAIDS HIV estimates process.
 
 4. **Uncertainty quantification**:
 Conclusions drawn by synthesising multiple incomplete data sources are unlikely to be firm and unanimous.
