--- a/corrections/corrections.Rmd
+++ b/corrections/corrections.Rmd
@@ -11,6 +11,20 @@ output:
       in_header: preamble.tex
 ---
 
+```{r echo = FALSE}
+options(scipen = 100)
+
+knitr::opts_chunk$set(
+  echo = FALSE,
+  warning = FALSE,
+  message = FALSE,
+  dpi = 320,
+  cache = TRUE,
+  out.width = "95%",
+  fig.align = 'center'
+)
+```
+
 \newpage
 
 # Dr. Christopher Paciorek
@@ -72,11 +86,14 @@ Changed to "Both DHS and PHIA surveys collect demographic, behavioural, and clin
 
 > *12: individual disclosure: error may come from them not knowing status*
 
-Not yet resolved.
+Good point, I have added the sentence:
+"Furthermore, individuals may be unaware of their HIV status.".
 
 > *14: "UNAIDS process"*
 
-Not yet resolved.
+Apologies for this stub!
+This has been been corrected as follows:
+"Indeed, careful validation of data by country teams is a crucial part of the yearly UNAIDS HIV estimates process.".
 
 ### Chapter 3
 
@@ -86,7 +103,11 @@ Thank you for the pointer, I have fixed this issue and look forward to joining t
 
 > *Fig 3.1: I suggest that you also show the likelihood.*
 
-Not yet resolved.
+I have now included the likelihood in this figure as follows:
+
+```{r conjugate}
+knitr::include_graphics("../figures/bayesian/conjugate.png")
+```
 
 > *17: Beyond just p(y) even if you know the full form of p(phi|y) what do you do with it in non-trivial dimensions? You have to be able to either draw from it or estimate expectations of interest. the issue is rather broader than just the unknown normalizing constant.*
 
