--- a/corrections/corrections.Rmd
+++ b/corrections/corrections.Rmd
@@ -111,11 +111,16 @@ knitr::include_graphics("../figures/bayesian/conjugate.png")
 
 > *17: Beyond just p(y) even if you know the full form of p(phi|y) what do you do with it in non-trivial dimensions? You have to be able to either draw from it or estimate expectations of interest. the issue is rather broader than just the unknown normalizing constant.*
 
-Not yet resolved.
+Good point!
+I have added the sentence:
+"Further, even given a closed form expression for the posterior distribution, if $\mathbf{\phi}}$ is of moderate to high dimension, then it is not obvious how to evaluate expressions of interest, which usually themselves are integrals, or expectations, with respect to the posterior distribution.".
 
 > *19. You haven't defined 'convergence' when you dive into diagnostics.*
 
-Not yet resolved.
+I have altered the text to read:
+"After running an MCMC sampler, it is important that diagnostic checks are used to evaluate whether the Markov chain has reached its stationary distribution.
+If so, the Markov chain is said to have converged, and its samples may be used to compute posterior quantities.
+Though it is possible to check poor convergence in some cases, we may never be sure that a Markov chain has converged, and thus that results computed from MCMC will be accurate.".
 
 > *21. I'd frame this as deterministic approximations need to focus on approximating expectations of interest. I think of Laplace as approximating an integral over part of parameter space (often > random effects') to be able to work with a smaller-dimensional space, such as for maximization.*
 
@@ -131,7 +136,7 @@ Not yet resolved.
 
 > *Sec 3.4: worth commenting on additivity of these measures that treat each obs as a unit of information given you are in a spatial setting.*
 
-Not yet resolved.
+Note connection to SLOO-CV in Chapter 4.
 
 > *35. (3.30) should be for $\pi_{2hj}$.*
 
